--- a/src/styling/style.css
+++ b/src/styling/style.css
@@ -255,7 +255,7 @@ header {
 
 #ik-foto {
   height: 200px;
-  width: 200px;
+  width: 183px;
   border-radius: 50%; }
 
 .cv img {
@@ -281,20 +281,21 @@ header {
 
 .wrapper {
   position: relative;
+  margin-bottom: 55%;
   display: block; }
 
-.text {
+.myWorkText {
   position: absolute;
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(255, 255, 255);
   height: 156px;
   width: 278px;
   line-height: 32px;
   text-align: center;
   z-index: 10;
-  opacity: 0;
-  -webkit-transition: 0.5s;
+  /* opacity: 1; */
+  /* -webkit-transition: 0.5s;
   -moz-transition: 0.5s;
-  transition: 0.5s;
+  transition: 0.5s; */
   color: black; }
-  .text:hover {
-    opacity: 1; }
+  /* .text:hover {
+    opacity: 1; } */
